--- a/Source/Climber/Climber/Climber.csproj
+++ b/Source/Climber/Climber/Climber.csproj
@@ -101,8 +101,10 @@
     <Compile Include="GameObjects\Base\IDrawableEntity.cs" />
     <Compile Include="GameObjects\Base\IEnemy.cs" />
     <Compile Include="GameObjects\Base\IFruit.cs" />
+    <Compile Include="GameObjects\Base\IPlayer.cs" />
     <Compile Include="GameObjects\CollisionHelper.cs" />
     <Compile Include="GameObjects\CollisionType.cs" />
+    <Compile Include="GameObjects\ClimbingDirection.cs" />
     <Compile Include="GameObjects\Drawables\Banana.cs" />
     <Compile Include="GameObjects\Base\DrawableEntity.cs" />
     <Compile Include="GameObjects\Drawables\Snake.cs" />
@@ -154,6 +156,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
